update findFirstImage_Image and findByProductId_Price